<resources>
    <string name="app_name">AEG2000 Agent</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Impostazioni</string>
    <string name="title_activity_products">Prodotti</string>
    <string name="no_data">Nessun risultato</string>
    <string name="title_activity_customers">Clienti</string>
    <string name="test_url">http://192.168.1.85:5000/api/v1.0</string>
    <string name="please_wait">Attendere prego...</string>
    <string name="title_activity_update_data">Aggiornamento dati</string>
    <string name="title_activity_update_customers">Aggiornamento clienti</string>
    <string name="title_activity_update_products">Aggiornamento prodotti</string>
    <string name="title_activity_order">Ordine</string>

    <string name="customerId">customerId</string>
    <string name="orderId">orderId</string>
    <string name="actionNewOrder">NEW_ORDER</string>
    <string name="quantity">qta</string>
    <string name="notes">note</string>
    <string name="discount">sconto</string>
    <string name="productId">productId</string>
    <string name="PICK_PRODUCT">pickProduct</string>
    <string name="action_save">salva</string>
    <string name="title_activity_customer_details">Scheda cliente</string>
    <string name="delete">Elimina</string>
    <string name="action_send">Invia</string>
    <string name="title_activity_orders_history">Storico Ordini</string>
    <string name="new_order">nuovo ordine</string>
    <string name="cart">Carrello: 0</string>
    <string name="waiting_orders">Ordini in attesa</string>
    <string name="title_activity_waiting_orders">Ordini in attesa</string>
    <string name="productCode">product_code</string>
    <string name="actionEditOrder">EDIT_ORDER</string>
    <string name="new_order_icewer">nuovo Ice Wer</string>
    <string name="title_activity_orders_icewer">Ordine Icewer</string>
    <string name="title_activity_price_list">Listino</string>
    <string name="PICK_PRODUCT_FOR_ORDER_ITEM">pickProductForOrderItem</string>
    <string name="PICK_PRODUCT_FOR_DISCOUNT">pickOnlyProduct</string>
    <string name="discountValue">discountValue</string>
    <string name="discountType">discountType</string>
    <string name="no_customers">Nessun cliente. Aggiorna i dati per favore.</string>
    <string name="no_products">Nessun prodotto. Aggiorna i dati per favore.</string>
    <string name="no_products_in_order">Aggiungi un prodotto con il pulsante in basso.</string>
    <string name="no_pricelist">Nessun prodotto scontato.</string>
    <string name="no_orders">Per questo cliente non hai mai inviato ordini.</string>
    <string name="yes">Si</string>
    <string name="no">No</string>

    <string name="title_activity_splash">Splash</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Accesso</string>
    <string name="prodotti">&#160;&#160;&#160;Listino Prodotti</string>
    <string name="clienti">&#160;&#160;&#160;Clienti</string>
    <string name="ordini_in_attesa">&#160;&#160;&#160;Ordini in attesa</string>
    <string name="messaggi">&#160;&#160;&#160;Messaggi</string>
    <string name="cerca_cliente">cerca cliente</string>
    <string name="title_activity_waiting_orders_all">Ordini in attesa</string>
    <string name="add_product">Aggiungi prodotto</string>
    <string name="no_favorite">Non c\'è ancora nessun prodotto preferito.</string>
    <string name="favorites">Prodotti preferiti</string>
    <string name="deleteCartItem">Rimuovi dal carrello</string>
</resources>
